# ctd-fusionnet-deepfake-detection

./: .gitignore  README.md  app.py  calculate_stats.py  dataset.py  generate_confusion_matrix.py  inspect_ckpt.py  inspect_logs.py  main.ipynb  model.py  plot_loss.py  pyproject.toml  resplit_diffusion.py  restructure_ddata.py  split_catanddog_dataset.py  split_ddata_train_val.py  train.py  transforms.py
debug_experiment/: DIAGNOSIS_100_PCT_ACCURACY.md  analyze_leakage.py  check_dataset_issues.py  debug_dataset.py  debug_model.py  debug_train.py  diagnose_100pct_accuracy.py  fix_dataset_split.py  verify_labels.py
infrastructure/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
lightning_classification/: .gitignore  ARCHITECTURE.txt  MAC_READY.txt  MAC_SETUP.md  QUICKREF.txt  README.md  SUMMARY.md  __init__.py  check_mps.py  datamodule.py  inference.py  mac_quickstart.sh  model.py  requirements.txt  test_setup.py  train.py
lightning_impl/: datamodule.py  dataset.py  inference.py  lightning_module.py  model.py  prepare_data.py  train.py
outputs/logs/lightning_classification/experiment_1/: events.out.tfevents.1764479037.Sameers-MacBook-Pro.local.15319.0  events.out.tfevents.1764479084.Sameers-MacBook-Pro.local.15760.0  events.out.tfevents.1764479461.Sameers-MacBook-Pro.local.15760.1  hparams.yaml
templates/: index.html
